# Jam2

./: .gitignore  AGENTS.md  BUILDING.md  BugTracker.md  Bugs.md  CMakeLists.txt  PLAN.md  README.md  THIRD_PARTY_NOTICES.md  compile.cmd  compile.sh  plan-capture.md  plan-gui.md  refactor-binaries.md  refactor-efficiency.md  refactor-modes.md  refactor-plan.md  refactor-python.md  refactor-security.md  refactor.md
app/: CMakeLists.txt  Jam2Resources.qrc  main.cpp
app/application/: ApplicationEntrypoint.cpp  ApplicationEntrypoint.hpp  ApplicationRuntime.cpp  ApplicationRuntime.hpp  AssetChunkProtocol.cpp  AssetChunkProtocol.hpp  AutomationChannel.cpp  AutomationChannel.hpp  BoundaryValidation.cpp  BoundaryValidation.hpp  ContentLimits.hpp  ControlClient.cpp  ControlClient.hpp  ControlMessageValidation.cpp  ControlMessageValidation.hpp  ControlProtocol.cpp  ControlProtocol.hpp  ControlServer.cpp  ControlServer.hpp  ControllerLifecycleValidation.cpp  ControllerLifecycleValidation.hpp  DebugActionValidation.cpp  DebugActionValidation.hpp  DebugAutomation.cpp  DebugAutomation.hpp  NativeTcpTransport.cpp  NativeTcpTransport.hpp  RuntimeContracts.hpp  RuntimeHost.cpp  SessionController.cpp  SessionController.hpp  SharedSessionController.cpp  SharedSessionController.hpp
app/cli/: CliDispatch.cpp  CliEntrypoint.hpp  CliOptions.cpp  CliOptions.hpp  CliRecordingSupervisor.cpp  CliRecordingSupervisor.hpp  CliRuntime.hpp  CliStats.cpp  CliStats.hpp  NetworkRuntime.cpp
app/gui/: AssetTransferService.cpp  AssetTransferService.hpp  BeatGridModel.cpp  BeatGridModel.hpp  BeatGridWidget.cpp  BeatGridWidget.hpp  GenerationRecipe.cpp  GenerationRecipe.hpp  GuiControlMessageRouter.cpp  GuiControlMessageRouter.hpp  GuiLoopbackRecorder.cpp  GuiLoopbackRecorder.hpp  GuiPresentation.cpp  GuiPresentation.hpp  GuiTheme.hpp  LooperProject.cpp  LooperProject.hpp  MainWindow.cpp  MainWindow.hpp  MainWindowPages.cpp  MainWindowPages.hpp  MetronomeTransportController.cpp  MetronomeTransportController.hpp  MixerStatsViewModel.cpp  MixerStatsViewModel.hpp  MusicTheory.cpp  MusicTheory.hpp  PerformanceWidgets.cpp  PerformanceWidgets.hpp  PlaybackGrid.cpp  PracticeIdeaController.cpp  PracticeIdeaController.hpp  PracticeIdeaDialogs.cpp  PracticeIdeaDialogs.hpp  PracticeIdeaGenerator.cpp  PracticeIdeaGenerator.hpp  PracticeReferenceRenderer.cpp  PracticeReferenceRenderer.hpp  PreparedMixRenderer.cpp  PreparedMixRenderer.hpp  (+15 more)
app/platform/: Info.plist.in
app/platform/assets/: jam2.icns
apps/jam2-capture/: CMakeLists.txt  Info.plist  loopback_capture_macos.hpp  loopback_capture_macos.mm  main.cpp
apps/jam2-cli/: CMakeLists.txt  cli_entry.hpp  main.cpp  runtime_entry.hpp
apps/jam2-gui/: ApplicationRuntime.cpp  ApplicationRuntime.hpp  BeatGridModel.cpp  BeatGridModel.hpp  BeatGridWidget.cpp  BeatGridWidget.hpp  CMakeLists.txt  ControlClient.cpp  ControlClient.hpp  ControlProtocol.hpp  ControlServer.cpp  ControlServer.hpp  ControllerLifecycleValidation.cpp  ControllerLifecycleValidation.hpp  GuiLoopbackRecorder.hpp  Info.plist.in  Jam2.rc.in  Jam2MacPermissions.hpp  Jam2MacPermissions.mm  Jam2Process.cpp  Jam2Process.hpp  LeadCueModel.hpp  LooperProject.cpp  LooperProject.hpp  MainWindow.cpp  MainWindow.hpp  PlaybackGrid.cpp  PlaybackGrid.hpp  PreparedMixRenderer.cpp  PreparedMixRenderer.hpp  SessionController.cpp  SessionController.hpp  SharedSessionController.cpp  SharedSessionController.hpp  SharedTrackController.cpp  SharedTrackController.hpp  SharedTrackModel.hpp  main.cpp
design/: performance-desk.html  performance-orbit.html  signal-room.html  theme-studio.html
docs/: Benchmark.md  Building.md  Capture.md  ConnectionTest.md  Diagnosing.md  Engine.md  Gui.md  Licensing.md  Mesh.md  Metronome.md  Profiles.md  StressTests.md  TestCases.md  Tuner.md  Validation.md
libs/jam2-core/: CMakeLists.txt
libs/jam2-core/include/jam2/: audio_device.hpp  audio_ring.hpp  common.hpp  engine.hpp  gui_control_protocol.hpp  metronome.hpp  network_session.hpp  output_recorder.hpp  pcm16_wav.hpp  peer_mixer.hpp  peer_stream.hpp  prepared_track_source.hpp  protocol.hpp  runtime_limits.hpp  session_authority.hpp  track_take_recorder.hpp  tuning_profile.hpp  udp_socket.hpp
libs/jam2-core/src/: audio_device_macos.cpp  audio_device_windows.cpp  audio_ring.cpp  common.cpp  engine.cpp  metronome.cpp  network_capture.cpp  network_session.cpp  output_recorder.cpp  pcm16_wav.cpp  peer_mixer.cpp  peer_stream.cpp  pitch_analyzer.cpp  pitch_analyzer.hpp  prepared_track_source.cpp  protocol.cpp  session_authority.cpp  stun.cpp  track_take_recorder.cpp  tuning_profile.cpp  udp_socket.cpp
logs/: jack.txt  macwifi-stdout2.txt  serveroutput-macwifi.txt
logs/jack/: analysis.json  jack-basestdout.txt  recommendation.txt
release/: jam2-macos-arm64
src/: audio_device.hpp  audio_device_macos.cpp  audio_device_windows.cpp  audio_ring.cpp  audio_ring.hpp  common.cpp  main.cpp  protocol.cpp  protocol.hpp  stun.hpp  udp_socket.cpp  udp_socket.hpp
tests/: CMakeLists.txt  jam2_tests.cpp  test_benchmark_control.py
tests/jam2-core/: CMakeLists.txt  jam2_tests.cpp
tools/: analyze_benchmark_results.py  analyze_matrix_csv.py  collect_matrix_csv.py  connection_test.py  jam2_audio_analysis.py  jam2_benchmark_control.py  jam2_benchmark_suite.py  jam2_harness.py  jam2_metrics.py  jam2_profiles.py  jam2_results.py  jam2_scenarios.py  jam2_test.py  jam2_tooling.py  jam2_udp_protocol.py  jam2_udp_validation.py  matrix_common.py  run_benchmark_client.py  run_benchmark_server.py  run_matrix_client.py  run_matrix_server.py  run_stress_local.py  test_jam2_results.py  test_matrix.json  test_udp_stress_proxy.py  udp_stress_proxy.py  upload_server.py
tools/jam2test/: __init__.py  artifacts.py  audio_analysis.py  benchmark.py  benchmark_control.py  benchmark_suite.py  connectivity.py  connectivity_native.py  dispatch.py  format_comparison.py  fuzz.py  impairment.py  manifest.py  metrics.py  native.py  profiles.py  results.py  scenarios.py  stress.py  test_artifacts.py  test_benchmark.py  test_benchmark_control.py  test_fuzz.py  test_impairment.py  (+7 more)
(+10 files in other folders)
